# resume-optimizer

./: .gitignore  Jenkinsfile  firebase.json  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/ai/: __init__.py  factory.py  gemini.py  provider.py  schemas.py
apps/api/app/auth/: __init__.py  dependencies.py  errors.py  firebase.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/models/: __init__.py  analysis.py  improvement.py  layout.py  resume.py
apps/api/app/parsers/: __init__.py  resume_parser.py
apps/api/app/repositories/: __init__.py  analysis_repository.py  improvement_repository.py  resume_repository.py
apps/api/app/services/: analysis_service.py  ats_scan_service.py  bullet_optimization_service.py  employment_structure.py  export_service.py  improvement_service.py  resume_service.py  resume_storage_service.py  resume_upload_service.py
apps/api/app/v1/: router.py
apps/api/app/v1/routes/: analysis.py  health.py  resume.py  tailored_resume.py
apps/api/docker/: tectonic-warmup.tex
apps/api/scripts/: create_test_id_token.py
apps/api/tests/ai/: test_gemini.py
apps/api/tests/api/: test_analysis.py  test_resume_management.py  test_resume_upload.py  test_tailored_resumes.py
apps/api/tests/core/: test_config.py
apps/api/tests/parsers/: test_resume_links.py
apps/api/tests/services/: test_analysis_service.py  test_ats_scan_service.py  test_bullet_optimization_service.py  test_export_service.py  test_improvement_service.py
scripts/: deploy_render.py
(+34 files in other folders)
